<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/no_internet_connection_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_internet_connection"
        android:contentDescription="@string/no_internet_connection_image_desc"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/oops"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#a7a7a7"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#959595"
        android:text="@string/no_internet_connection_message"
    />

    <Button
        android:id="@+id/retry_button"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
    />
</LinearLayout>