<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/toolbar_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">

            <FrameLayout
                android:id="@+id/frame_layout_driving_icon"
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/toolbar_driving_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_car_grey_24dp"
                    android:contentDescription="@string/car_mode"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_layout_transit_icon"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/toolbar_transit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_transit_grey_24dp"
                    android:contentDescription="@string/transit_mode"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_layout_walking_icon"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/toolbar_walking_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_walking_grey_24dp"
                    android:contentDescription="@string/walking_mode"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/toolbar_icons"
            android:layout_toStartOf="@id/toolbar_icons"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar_walking_icon_desc"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-4dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foots"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_transit_icon_desc"
            android:layout_width="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-4dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_toLeftOf="@+id/toolbar_walking_icon_desc"
            android:layout_toStartOf="@id/toolbar_walking_icon_desc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transit"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/toolbar_driving_icon_desc"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:layout_toLeftOf="@id/toolbar_transit_icon_desc"
                android:layout_toStartOf="@id/toolbar_transit_icon_desc">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/via"
                    android:textSize="15sp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                />

            </LinearLayout>

    </RelativeLayout>

</LinearLayout>