<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sillaps.evaluationapp.activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/current_position_and_destination_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_current_position_18dp"
            android:drawableStart="@drawable/ic_current_position_18dp"
            android:drawablePadding="15dp"
            android:text="@string/your_location"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#dddddd"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/up_down_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/up_down_ic_desc"
                    android:src="@drawable/ic_up_down_18dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_toLeftOf="@id/up_down_image_view"
                    android:layout_toStartOf="@id/up_down_image_view"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:background="#dddddd"
                />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/destination_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_map_marker_18dp"
            android:drawableStart="@drawable/ic_map_marker_18dp"
            android:drawablePadding="15dp"
            android:text="@string/choose_destination"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/destination_default_color"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_center_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/current_position_and_destination_layout">
        <include
            layout="@layout/no_internet_connection"
        />
        <include
            layout="@layout/location_service_is_off"
        />

        <FrameLayout
            android:id="@+id/map_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <fragment
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.sillaps.evaluationapp.MapsActivity"
            />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/layout_center_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/route_infos_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/destination_image"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/black"
            />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nbr_of_hours_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                />

                <TextView
                    android:id="@+id/nbr_of_minutes_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                />

                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:background="#dddddd"
                    android:layout_centerInParent="true"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/start"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                />

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation"
            android:background="@color/white"
            app:itemIconTint="@color/bottom_navigation_tab_item"
            app:itemTextColor="@color/bottom_navigation_tab_item"
        />
    </LinearLayout>

</RelativeLayout>